# yuragi-haptic-generator

./: .gitattributes  .gitignore  .npmrc  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  debug_device2.py  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.yml  force_device_test.py  implementation_plan.md  pnpm-lock.yaml  pyproject.toml  setup-dev.sh  test_local_waveform.py  yuragi_test5.ipynb  yuragi_test6.ipynb
.github/workflows/: ci.yml
backend/: .dockerignore  .env.development  .env.example  .env.production  Dockerfile  README.md  TDD_DEVELOPMENT_REPORT.md  check_imports.py  example_usage.py  pyproject.toml  requirements-api.txt
backend/src/: main.py  server.py
backend/src/config/: logging.py  settings.py
backend/src/haptic_system/: __init__.py  channel.py  controller.py  device.py  modulation.py  motion_generators.py  validators.py  waveform.py  yuragi_animator.py
backend/tests/: test_imports.py
backend/tests/haptic_system/: test_resonator.py
backend/tests/integration/: test_api_integration.py  test_signal_pipeline.py  test_yuragi_api.py
backend/tests/unit/: test_16_direction_mode.py  test_device_symmetry.py  test_haptic_channel.py  test_haptic_controller.py  test_haptic_device.py  test_modulation.py  test_motion_generators.py  test_noise.py  test_noise_simulation.py  test_sawtooth_waveform.py
config/fluentd/: fluent.conf
docs/: 00_index.md  refactoring-candidates.md  refactoring-execution-plan.md  refactoring-meta-plan.md
docs/01_project/: project_analysis.md  project_overview_latest.md  project_summary.md
docs/02_requirements/: draft_requirements.md  system_requirements.md
docs/03_design/: massage_feature_design.md  software_design.md  software_design_mvp.md  test_strategy.md
docs/05_testing/: tdd_test_design.md
docs/06_implementation/: mvp_implementation_plan.md
docs/07_implementation/: api_documentation.md  waveform_rendering_websocket.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/Common/: Button.tsx  ColorPicker.css  ColorPicker.tsx  DeviceWarningDialog.css  DeviceWarningDialog.tsx  Input.tsx  NotificationContainer.tsx  Slider.css  Slider.tsx  StreamingStatusIndicator.css  StreamingStatusIndicator.tsx
frontend/src/components/ControlPanel/: ChannelControl.tsx  HapticControlPanel.tsx  VectorControl.tsx  YURAGIControl.tsx
frontend/src/components/Visualization/: AccelerationTrajectory.css  AccelerationTrajectory.tsx  AccelerationTrajectoryContainer.tsx  WaveformChart.tsx  WaveformChartContainer.tsx  WaveformColorCustomizer.css  WaveformColorCustomizer.tsx
frontend/src/components/__tests__/: ChannelControl.test.tsx  CircularTrajectory.test.tsx  CircularTrajectory.test.tsx.skip  MassagePatternSelector.test.tsx  MassagePatternSelector.test.tsx.skip  VectorControl.test.tsx  WaveformChart.test.tsx  YURAGIControl.test.tsx
frontend/src/config/: environment.ts  theme.ts
frontend/src/contexts/: hapticStore.ts
frontend/src/contexts/__tests__/: hapticStore.test.ts  hapticStoreMassageExtensions.test.ts
frontend/src/hooks/: useErrorHandler.ts  useQueryStoreIntegration.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useParametersQuery.test.ts  useWebSocket.test.ts
frontend/src/hooks/queries/: index.ts  useDeviceQuery.ts  useHealthQuery.ts  useParametersQuery.ts  useStreamingQuery.ts  useVectorForceQuery.ts  useWaveformQuery.ts
frontend/src/lib/: queryClient.ts  zustandQuerySync.ts
frontend/src/services/: hapticService.ts
frontend/src/services/__tests__/: websocketService.test.ts  websocketService.test.ts.skip
frontend/src/test/: README.md  performanceUtils.ts  setup.ts  test-utils.tsx
frontend/src/test/mocks/: chartjs.ts  hapticService.ts  index.ts  websocket.ts  websocketMocks.ts
frontend/src/types/: errors.ts  hapticTypes.ts
frontend/src/utils/: chartConfig.ts  logger.ts  waveformGenerator.test.ts  waveformGenerator.ts  yuragiWaveform.ts
frontend/tests/e2e/: README.md  app.smoke.spec.ts  error-handling.spec.ts  example.spec.ts  haptic-controls.spec.ts  responsive-design.spec.ts  streaming-controls.spec.ts  vector-controls.spec.ts  yuragi.spec.ts
frontend/tests/e2e/fixtures/: testData.ts
frontend/tests/e2e/utils/: testHelpers.ts
scripts/: backup.sh  deploy.sh  monitor.sh  run-e2e-tests.sh
