[project]
name = "haptic-system"
version = "0.1.0"
description = "Dual haptic generator system with sawtooth wave support"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.116.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["src/haptic_system"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "uvloop>=0.17.0",
    "httptools>=0.6.0",
]
production = [
    "gunicorn>=21.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = ["E501", "N805", "N806", "W293"]  # line too long, cls in validators, uppercase vars in functions, blank line whitespace

[tool.black]
line-length = 88
target-version = ['py311']
